# kdf-shop-django

./: .gitignore  Dockerfile  Taskfile.yml  pyproject.toml  requirements.txt
djackets_django/: settings.py  urls.py
order/: models.py  views.py
order/migrations/: 0002_remove_order_stripe_token.py  0003_remove_order_user.py  0004_order_items_ordered_order_paid_order_post_delivery_and_more.py
product/: admin.py  serializers.py  tests.py  urls.py  views.py
scripts/: start.sh
